--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --updrage pip
+          python -m pip install --upgrade pip
           pip install -r requirments.txt
 
       - name: Run unit tests
