--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Run unit tests
         run: |
           pip install pytest
-          pytest -q
+          PYTHONPATH=. pytest -q
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
