--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,15 @@ jobs:
       API_KEY: ${{ secrets.API_KEY}}
 
     steps:
+      - name: verify API_KEY exists
+        run: |
+          if [ -z "$API_KEY" ]; then
+            echo "API_KEY is empty!"
+            exit 1
+          else
+            echo "API_KEY is set with length: ${#API_KEY}"
+          fi
+
       - name: Checkout code
         uses: actions/checkout@v4
 
